--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </properties>
 
     <dependencies>
+        <!-- Dependency for "save"-function -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
