--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,20 @@
 
     <dependencies>
         <!-- Dependency for "save"-function -->
+        <!-- kann weg -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+
+        <!-- brauch ich -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
 
         <!-- Dependencies for JavaFX, FXML -->
         <dependency>
