--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,11 @@
     <dependencies>
         <!-- Dependency for "save"-function -->
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20180130</version>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
+
 
         <!-- Dependencies for JavaFX, FXML -->
         <dependency>
