--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     <dependencies>
         <!-- Dependency for "save"-function -->
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20180130</version>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
         <!-- Dependencies for JavaFX, FXML -->
@@ -77,7 +77,6 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-
             </plugin>
         </plugins>
     </build>
